// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avoid overflow when table scale to full width 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "isNumberColumnEnabled": false,
        "layout": "full-width",
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "colwidth": Array [
                  554,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
            Object {
              "attrs": Object {
                "colwidth": Array [
                  1130,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
            Object {
              "attrs": Object {
                "colwidth": Array [
                  116,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "colwidth": Array [
                  554,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "colwidth": Array [
                  1130,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "colwidth": Array [
                  116,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "colwidth": Array [
                  554,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "colwidth": Array [
                  1130,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "colwidth": Array [
                  116,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`Avoid overflow when table scale to wide 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "isNumberColumnEnabled": false,
        "layout": "wide",
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "colwidth": Array [
                  295,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
            Object {
              "attrs": Object {
                "colwidth": Array [
                  603,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
            Object {
              "attrs": Object {
                "colwidth": Array [
                  62,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "colwidth": Array [
                  295,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "colwidth": Array [
                  603,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "colwidth": Array [
                  62,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "colwidth": Array [
                  295,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "colwidth": Array [
                  603,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "colwidth": Array [
                  62,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`Maintains the default layout size without overflow when toggling through layouts 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "isNumberColumnEnabled": false,
        "layout": "default",
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "colwidth": Array [
                  341,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
            Object {
              "attrs": Object {
                "colwidth": Array [
                  339,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "colwidth": Array [
                  341,
                ],
                "rowspan": 2,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "colwidth": Array [
                  339,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "colwidth": Array [
                  339,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "colwidth": Array [
                  341,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "colwidth": Array [
                  339,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`Maintains the full-width layout size without overflow 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "isNumberColumnEnabled": false,
        "layout": "full-width",
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "colwidth": Array [
                  902,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
            Object {
              "attrs": Object {
                "colwidth": Array [
                  898,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "colwidth": Array [
                  902,
                ],
                "rowspan": 2,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "colwidth": Array [
                  898,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "colwidth": Array [
                  898,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "colwidth": Array [
                  902,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "colwidth": Array [
                  898,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`Maintains the wide layout size without overflow 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "isNumberColumnEnabled": false,
        "layout": "wide",
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "colwidth": Array [
                  481,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
            Object {
              "attrs": Object {
                "colwidth": Array [
                  479,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "colwidth": Array [
                  481,
                ],
                "rowspan": 2,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "colwidth": Array [
                  479,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "colwidth": Array [
                  479,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "colwidth": Array [
                  481,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "colwidth": Array [
                  479,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`Maintains the wide layout size without overflow with dynamic text sizing 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "isNumberColumnEnabled": false,
        "layout": "wide",
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "colwidth": Array [
                  481,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
            Object {
              "attrs": Object {
                "colwidth": Array [
                  479,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "colwidth": Array [
                  481,
                ],
                "rowspan": 2,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "colwidth": Array [
                  479,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "colwidth": Array [
                  479,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "colwidth": Array [
                  481,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "colwidth": Array [
                  479,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`Scales down column sizes when bodied extension parent layout changes 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean mi nisl, venenatis eget auctor vitae, venenatis quis lorem. Suspendisse maximus tortor vel dui tincidunt cursus. Vestibulum magna nibh, auctor non auctor id, finibus vitae orci. Nulla viverra ipsum et nunc fringilla ultricies. Pellentesque vitae felis molestie justo finibus accumsan. Suspendisse potenti. Nulla facilisi. Integer dignissim quis velit quis elementum. Sed sit amet varius ante. Duis vestibulum porta augue eu laoreet. Morbi id risus et augue sollicitudin aliquam. In et ligula dolor. Nam ac aliquet diam.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "content": Array [
        Object {
          "attrs": Object {
            "width": 50,
          },
          "content": Array [
            Object {
              "attrs": Object {
                "isNumberColumnEnabled": false,
                "layout": "default",
              },
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "attrs": Object {
                        "colwidth": Array [
                          149,
                        ],
                      },
                      "content": Array [
                        Object {
                          "type": "paragraph",
                        },
                      ],
                      "type": "tableHeader",
                    },
                    Object {
                      "attrs": Object {
                        "colwidth": Array [
                          73,
                        ],
                      },
                      "content": Array [
                        Object {
                          "type": "paragraph",
                        },
                      ],
                      "type": "tableHeader",
                    },
                    Object {
                      "attrs": Object {
                        "colwidth": Array [
                          267,
                        ],
                      },
                      "content": Array [
                        Object {
                          "type": "paragraph",
                        },
                      ],
                      "type": "tableHeader",
                    },
                  ],
                  "type": "tableRow",
                },
                Object {
                  "content": Array [
                    Object {
                      "attrs": Object {
                        "colwidth": Array [
                          149,
                        ],
                      },
                      "content": Array [
                        Object {
                          "type": "paragraph",
                        },
                      ],
                      "type": "tableCell",
                    },
                    Object {
                      "attrs": Object {
                        "colwidth": Array [
                          73,
                        ],
                      },
                      "content": Array [
                        Object {
                          "type": "paragraph",
                        },
                      ],
                      "type": "tableCell",
                    },
                    Object {
                      "attrs": Object {
                        "colwidth": Array [
                          267,
                        ],
                      },
                      "content": Array [
                        Object {
                          "type": "paragraph",
                        },
                      ],
                      "type": "tableCell",
                    },
                  ],
                  "type": "tableRow",
                },
                Object {
                  "content": Array [
                    Object {
                      "attrs": Object {
                        "colwidth": Array [
                          149,
                        ],
                      },
                      "content": Array [
                        Object {
                          "type": "paragraph",
                        },
                      ],
                      "type": "tableCell",
                    },
                    Object {
                      "attrs": Object {
                        "colwidth": Array [
                          73,
                        ],
                      },
                      "content": Array [
                        Object {
                          "type": "paragraph",
                        },
                      ],
                      "type": "tableCell",
                    },
                    Object {
                      "attrs": Object {
                        "colwidth": Array [
                          267,
                        ],
                      },
                      "content": Array [
                        Object {
                          "type": "paragraph",
                        },
                      ],
                      "type": "tableCell",
                    },
                  ],
                  "type": "tableRow",
                },
              ],
              "type": "table",
            },
          ],
          "type": "layoutColumn",
        },
        Object {
          "attrs": Object {
            "width": 50,
          },
          "content": Array [
            Object {
              "type": "paragraph",
            },
          ],
          "type": "layoutColumn",
        },
      ],
      "marks": Array [
        Object {
          "attrs": Object {
            "mode": "wide",
          },
          "type": "breakout",
        },
      ],
      "type": "layoutSection",
    },
    Object {
      "attrs": Object {
        "extensionKey": "bodied-eh",
        "extensionType": "com.atlassian.confluence.macro.core",
        "layout": "default",
        "parameters": Object {
          "macroMetadata": Object {
            "placeholder": Array [
              Object {
                "data": Object {
                  "url": "",
                },
                "type": "icon",
              },
            ],
          },
          "macroParams": Object {},
        },
      },
      "content": Array [
        Object {
          "type": "paragraph",
        },
        Object {
          "attrs": Object {
            "isNumberColumnEnabled": false,
            "layout": "default",
          },
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "attrs": Object {
                    "colwidth": Array [
                      261,
                    ],
                  },
                  "content": Array [
                    Object {
                      "type": "paragraph",
                    },
                  ],
                  "type": "tableHeader",
                },
                Object {
                  "attrs": Object {
                    "colwidth": Array [
                      223,
                    ],
                  },
                  "content": Array [
                    Object {
                      "type": "paragraph",
                    },
                  ],
                  "type": "tableHeader",
                },
                Object {
                  "attrs": Object {
                    "colwidth": Array [
                      242,
                    ],
                  },
                  "content": Array [
                    Object {
                      "type": "paragraph",
                    },
                  ],
                  "type": "tableHeader",
                },
              ],
              "type": "tableRow",
            },
            Object {
              "content": Array [
                Object {
                  "attrs": Object {
                    "colwidth": Array [
                      261,
                    ],
                  },
                  "content": Array [
                    Object {
                      "type": "paragraph",
                    },
                  ],
                  "type": "tableCell",
                },
                Object {
                  "attrs": Object {
                    "colwidth": Array [
                      223,
                    ],
                  },
                  "content": Array [
                    Object {
                      "type": "paragraph",
                    },
                  ],
                  "type": "tableCell",
                },
                Object {
                  "attrs": Object {
                    "colwidth": Array [
                      242,
                    ],
                  },
                  "content": Array [
                    Object {
                      "type": "paragraph",
                    },
                  ],
                  "type": "tableCell",
                },
              ],
              "type": "tableRow",
            },
            Object {
              "content": Array [
                Object {
                  "attrs": Object {
                    "colwidth": Array [
                      261,
                    ],
                  },
                  "content": Array [
                    Object {
                      "type": "paragraph",
                    },
                  ],
                  "type": "tableCell",
                },
                Object {
                  "attrs": Object {
                    "colwidth": Array [
                      223,
                    ],
                  },
                  "content": Array [
                    Object {
                      "type": "paragraph",
                    },
                  ],
                  "type": "tableCell",
                },
                Object {
                  "attrs": Object {
                    "colwidth": Array [
                      242,
                    ],
                  },
                  "content": Array [
                    Object {
                      "type": "paragraph",
                    },
                  ],
                  "type": "tableCell",
                },
              ],
              "type": "tableRow",
            },
          ],
          "type": "table",
        },
      ],
      "type": "bodiedExtension",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`Scales down column sizes when parent layout changes breakout 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean mi nisl, venenatis eget auctor vitae, venenatis quis lorem. Suspendisse maximus tortor vel dui tincidunt cursus. Vestibulum magna nibh, auctor non auctor id, finibus vitae orci. Nulla viverra ipsum et nunc fringilla ultricies. Pellentesque vitae felis molestie justo finibus accumsan. Suspendisse potenti. Nulla facilisi. Integer dignissim quis velit quis elementum. Sed sit amet varius ante. Duis vestibulum porta augue eu laoreet. Morbi id risus et augue sollicitudin aliquam. In et ligula dolor. Nam ac aliquet diam.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "content": Array [
        Object {
          "attrs": Object {
            "width": 50,
          },
          "content": Array [
            Object {
              "attrs": Object {
                "isNumberColumnEnabled": false,
                "layout": "default",
              },
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "attrs": Object {
                        "colwidth": Array [
                          112,
                        ],
                      },
                      "content": Array [
                        Object {
                          "type": "paragraph",
                        },
                      ],
                      "type": "tableHeader",
                    },
                    Object {
                      "attrs": Object {
                        "colwidth": Array [
                          53,
                        ],
                      },
                      "content": Array [
                        Object {
                          "type": "paragraph",
                        },
                      ],
                      "type": "tableHeader",
                    },
                    Object {
                      "attrs": Object {
                        "colwidth": Array [
                          198,
                        ],
                      },
                      "content": Array [
                        Object {
                          "type": "paragraph",
                        },
                      ],
                      "type": "tableHeader",
                    },
                  ],
                  "type": "tableRow",
                },
                Object {
                  "content": Array [
                    Object {
                      "attrs": Object {
                        "colwidth": Array [
                          112,
                        ],
                      },
                      "content": Array [
                        Object {
                          "type": "paragraph",
                        },
                      ],
                      "type": "tableCell",
                    },
                    Object {
                      "attrs": Object {
                        "colwidth": Array [
                          53,
                        ],
                      },
                      "content": Array [
                        Object {
                          "type": "paragraph",
                        },
                      ],
                      "type": "tableCell",
                    },
                    Object {
                      "attrs": Object {
                        "colwidth": Array [
                          198,
                        ],
                      },
                      "content": Array [
                        Object {
                          "type": "paragraph",
                        },
                      ],
                      "type": "tableCell",
                    },
                  ],
                  "type": "tableRow",
                },
                Object {
                  "content": Array [
                    Object {
                      "attrs": Object {
                        "colwidth": Array [
                          112,
                        ],
                      },
                      "content": Array [
                        Object {
                          "type": "paragraph",
                        },
                      ],
                      "type": "tableCell",
                    },
                    Object {
                      "attrs": Object {
                        "colwidth": Array [
                          53,
                        ],
                      },
                      "content": Array [
                        Object {
                          "type": "paragraph",
                        },
                      ],
                      "type": "tableCell",
                    },
                    Object {
                      "attrs": Object {
                        "colwidth": Array [
                          198,
                        ],
                      },
                      "content": Array [
                        Object {
                          "type": "paragraph",
                        },
                      ],
                      "type": "tableCell",
                    },
                  ],
                  "type": "tableRow",
                },
              ],
              "type": "table",
            },
          ],
          "type": "layoutColumn",
        },
        Object {
          "attrs": Object {
            "width": 50,
          },
          "content": Array [
            Object {
              "type": "paragraph",
            },
          ],
          "type": "layoutColumn",
        },
      ],
      "type": "layoutSection",
    },
    Object {
      "attrs": Object {
        "extensionKey": "bodied-eh",
        "extensionType": "com.atlassian.confluence.macro.core",
        "layout": "wide",
        "parameters": Object {
          "macroMetadata": Object {
            "placeholder": Array [
              Object {
                "data": Object {
                  "url": "",
                },
                "type": "icon",
              },
            ],
          },
          "macroParams": Object {},
        },
      },
      "content": Array [
        Object {
          "type": "paragraph",
        },
        Object {
          "attrs": Object {
            "isNumberColumnEnabled": false,
            "layout": "default",
          },
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "attrs": Object {
                    "colwidth": Array [
                      349,
                    ],
                  },
                  "content": Array [
                    Object {
                      "type": "paragraph",
                    },
                  ],
                  "type": "tableHeader",
                },
                Object {
                  "attrs": Object {
                    "colwidth": Array [
                      301,
                    ],
                  },
                  "content": Array [
                    Object {
                      "type": "paragraph",
                    },
                  ],
                  "type": "tableHeader",
                },
                Object {
                  "attrs": Object {
                    "colwidth": Array [
                      327,
                    ],
                  },
                  "content": Array [
                    Object {
                      "type": "paragraph",
                    },
                  ],
                  "type": "tableHeader",
                },
              ],
              "type": "tableRow",
            },
            Object {
              "content": Array [
                Object {
                  "attrs": Object {
                    "colwidth": Array [
                      349,
                    ],
                  },
                  "content": Array [
                    Object {
                      "type": "paragraph",
                    },
                  ],
                  "type": "tableCell",
                },
                Object {
                  "attrs": Object {
                    "colwidth": Array [
                      301,
                    ],
                  },
                  "content": Array [
                    Object {
                      "type": "paragraph",
                    },
                  ],
                  "type": "tableCell",
                },
                Object {
                  "attrs": Object {
                    "colwidth": Array [
                      327,
                    ],
                  },
                  "content": Array [
                    Object {
                      "type": "paragraph",
                    },
                  ],
                  "type": "tableCell",
                },
              ],
              "type": "tableRow",
            },
            Object {
              "content": Array [
                Object {
                  "attrs": Object {
                    "colwidth": Array [
                      349,
                    ],
                  },
                  "content": Array [
                    Object {
                      "type": "paragraph",
                    },
                  ],
                  "type": "tableCell",
                },
                Object {
                  "attrs": Object {
                    "colwidth": Array [
                      301,
                    ],
                  },
                  "content": Array [
                    Object {
                      "type": "paragraph",
                    },
                  ],
                  "type": "tableCell",
                },
                Object {
                  "attrs": Object {
                    "colwidth": Array [
                      327,
                    ],
                  },
                  "content": Array [
                    Object {
                      "type": "paragraph",
                    },
                  ],
                  "type": "tableCell",
                },
              ],
              "type": "tableRow",
            },
          ],
          "type": "table",
        },
      ],
      "type": "bodiedExtension",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;
